--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,10 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
-
+html{
+    overflow: hidden;
+    -moz-overflow-style: hidden;
+}
 .App {
     display: flex;
     width: 100vw;
