--- a/src/css/landingpage.css
+++ b/src/css/landingpage.css
@@ -1,15 +1,22 @@
 body {
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 html {
     overflow: hidden;
+    -moz-overflow-style: hidden;
 }
+.svg{
+    position: absolute;
+    top:-200px;
 
+}
 .main-landing {
     background-color: #F1F1F1;
     max-width: 100vw;
     height: 100vh;
+    overflow: hidden;
 }
 
 .navbar {
@@ -36,7 +43,7 @@ html {
 
 .menu-button {
     cursor: pointer;
-    transition: all 300ms ease
+    transition: all 300ms ease;
 }
 
 .menu-button:hover {
@@ -69,10 +76,11 @@ html {
     background-color: #F1F1F1;
     height: 100vh;
     padding-top: 2rem;
-    transition: all 300ms ease-in-out;
     margin-top: 3rem;
     margin-left: auto;
+    transition: all 1000ms ease-in-out;
     border-top-left-radius: 10px;
+    
 }
 
 .nav-items-sidebar a {
@@ -85,6 +93,7 @@ html {
     transition: all 300ms ease-in-out;
     cursor: pointer;
     padding-top: 7px;
+    
 
 }
 
@@ -93,7 +102,6 @@ html {
     color: #F1F1F1;
 }
 
-.transition {}
 
 .heading-login {
     display: flex;
@@ -134,7 +142,9 @@ html {
     color: #929090;
     font-size: 2rem;
 }
-
+input {
+    background-color: #F1F1F1;
+}
 .login-page input {
     border: none;
     border-bottom: 1px solid grey;
@@ -329,5 +339,11 @@ img {
         width: 100%;
         margin-bottom: 3rem;
         font-size: 2rem;
+    }
+}
+@media (max-width:500px){
+    .landing-heading p{
+        font-size: 3rem;
+        font-weight: 500;
     }
 }
