--- a/src/App.css
+++ b/src/App.css
@@ -69,10 +69,10 @@ html {
 }
 
 .popup-content {
-    position: relative;
-    left: -56px;
-    top: 425px;
-    background-color: #00000023;
+    position: absolute;
+    left: 0;
+    top: 0;
+    background-color: #00000080;
     width: 100vw;
     height: 100vh;
     z-index: 10;
@@ -81,14 +81,15 @@ html {
 .popup {
     width: 300px;
     height: 120px;
-    position: absolute;
+    position: relative;
     top: 40vh;
-    left: 40vw;
+    margin: 0 auto;
     z-index: 100;
     background-color: hsla(0, 0%, 93%, 0.151);
     backdrop-filter: blur(10px);
     border-radius: 10px;
     overflow: hidden;
+
 
 }
 
@@ -183,7 +184,7 @@ html {
 .container {
     width: 25rem;
     height: 27rem;
-    background-color: #ffffff2d;
+    background-color: #BBBBBB;
     position: relative;
     top: 0px;
     backdrop-filter: blur(20px);
@@ -290,7 +291,6 @@ html {
     top: -388px;
     left: 369.4px;
     background-color: #bbbbbb;
-    opacity: .8;
     width: 32px;
     border-radius: 20px;
     height: 32px;
@@ -339,96 +339,97 @@ html {
         padding: 0 2rem;
     }
 } */
- .todos {
-     position: absolute;
-     width: 25.1rem;
-     height: 80%;
-     background-color: #eeeeee1c;
-     top: 40px;
-     left: 3vw;
-     padding: 1rem;
-     border-radius: 10px;
-     backdrop-filter: blur(30px);
+.todos {
+    position: absolute;
+    width: 25.1rem;
+    height: 80%;
+    background-color: #eeeeee1c;
+    top: 40px;
+    left: 3vw;
+    padding: 1rem;
+    border-radius: 10px;
+    backdrop-filter: blur(30px);
 
 
 
- }
+}
 
- .selected-project {
-     font-size: large;
-     font-weight: bold;
-     border-bottom: 2px solid grey;
-     padding-bottom: .5rem;
- }
+.selected-project {
+    font-size: large;
+    font-weight: bold;
+    border-bottom: 2px solid grey;
+    padding-bottom: .5rem;
+}
 
- .radio-text {
-     display: flex;
-     height: 2.5rem;
-     align-items: center;
- }
+.radio-text {
+    display: flex;
+    height: 2.5rem;
+    align-items: center;
+}
 
- .radio-text p {
-     margin-left: .5rem;
-     color: #beb9b9;
- }
+.radio-text p {
+    margin-left: .5rem;
+    color: #beb9b9;
+}
 
- .todo-container-2 {
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
+.todo-container-2 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 
- }
+}
 
- .todo-time-date-grey {
-     opacity: .7;
- }
+.todo-time-date-grey {
+    opacity: .7;
+}
 
- .circle {
-     cursor: pointer;
- }
+.circle {
+    cursor: pointer;
+}
 
- .time-and-project {
-     font-size: 12px;
-     margin-left: .5rem;
-     margin-top: -.4rem;
-     color: #afafaf;
- }
+.time-and-project {
+    font-size: 12px;
+    margin-left: .5rem;
+    margin-top: -.4rem;
+    color: #afafaf;
+}
 
- .line {
-     height: 1px;
-     background-color: #706f6f;
-     position: relative;
-     left: .5rem;
-     top: -26px;
-     width: 0%;
-     transition: width 300ms ease-in-out;
- }
+.line {
+    height: 1px;
+    background-color: #706f6f;
+    position: relative;
+    left: .5rem;
+    top: -26px;
+    width: 0%;
+    transition: width 300ms ease-in-out;
+}
 
- .line-through {
-     width: 100%;
- }
+.line-through {
+    width: 100%;
+}
 
- .add-to-next-day {
-     margin-right: .7rem
- }
+.add-to-next-day {
+    margin-right: .7rem
+}
 
- .todo-delete {
-     display: flex;
-     justify-content: space-between;
- }
+.todo-delete {
+    display: flex;
+    justify-content: space-between;
+}
 
- .arrow,
- .trash {
-     cursor: pointer;
-     transition: all 300ms ease-in-out;
-     border-radius: 50%;
+.arrow,
+.trash {
+    cursor: pointer;
+    transition: all 300ms ease-in-out;
+    border-radius: 50%;
 
- }
+}
 
- .arrow:hover,
- .trash:hover {
-     filter: drop-shadow(13px 0 rgba(0, 0, 0, 0.212));
- }
+.arrow:hover,
+.trash:hover {
+    filter: drop-shadow(13px 0 rgba(0, 0, 0, 0.212));
+}
+
 @media screen and (max-width:576px) {
     .App {
         padding: 0;
@@ -458,7 +459,7 @@ html {
 
 @media (max-width:424px) {
     .todos {
-        
+
         width: 94%;
     }
 }
@@ -685,4 +686,3 @@ html {
 }
 
 /*  todos csssssssssssss */
-
